// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<tooltip> demo: > render [basic] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Mouse over to display tooltip
    </button>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Mouse over to display tooltip
    </button>
    <!---->
  </div>
</div>
`;

exports[`<tooltip> demo: > render [color] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->#3491FA
    </button>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->#165DFF
    </button>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->#722ED1
    </button>
    <!---->
  </div>
</div>
`;

exports[`<tooltip> demo: > render [mini] correctly 1`] = `
<button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
  <!--v-if-->Mouse over to display tooltip
</button>
`;

exports[`<tooltip> demo: > render [position] correctly 1`] = `
<div class="sd:relative sd:w-110 sd:h-70"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd:absolute sd:top-0 sd:left-17.5 sd:w-25" type="button">
    <!--v-if-->TL
  </button>
  <!----><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd:absolute sd:top-0 sd:left-45 sd:w-25" type="button">
    <!--v-if-->TOP
  </button>
  <!----><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd:absolute sd:top-0 sd:left-72.5 sd:w-25" type="button">
    <!--v-if-->TR
  </button>
  <!----><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd:absolute sd:top-60 sd:left-17.5 sd:w-25" type="button">
    <!--v-if-->BL
  </button>
  <!----><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd:absolute sd:top-60 sd:left-45 sd:w-25" type="button">
    <!--v-if-->BOTTOM
  </button>
  <!----><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd:absolute sd:top-60 sd:left-72.5 sd:w-25" type="button">
    <!--v-if-->BR
  </button>
  <!----><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd:absolute sd:top-15 sd:left-2.5 sd:w-25" type="button">
    <!--v-if-->LT
  </button>
  <!----><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd:absolute sd:top-30 sd:left-2.5 sd:w-25" type="button">
    <!--v-if-->LEFT
  </button>
  <!----><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd:absolute sd:top-45 sd:left-2.5 sd:w-25" type="button">
    <!--v-if-->LB
  </button>
  <!----><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd:absolute sd:top-15 sd:left-87.5 sd:w-25" type="button">
    <!--v-if-->RT
  </button>
  <!----><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd:absolute sd:top-30 sd:left-87.5 sd:w-25" type="button">
    <!--v-if-->RIGHT
  </button>
  <!----><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd:absolute sd:top-45 sd:left-87.5 sd:w-25" type="button">
    <!--v-if-->RB
  </button>
  <!---->
</div>
`;
